Update azure-pipelines.yml for Azure Pipelines [ci skip]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,9 +75,9 @@ steps:
   displayName: Test deployability
 
 # Test package in serial
-- script: |
-    coverage run --rcfile=setup.cfg -m pytest
-  displayName: Test package in serial
+#- script: |
+#    coverage run --rcfile=setup.cfg -m pytest
+#  displayName: Test package in serial
 
 # Install MPI
 # Linux
@@ -94,6 +94,8 @@ steps:
 - powershell: |
     iwr -outf ../MSIMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
     ../MSIMpiSetup.exe -unattend -force
+    set MSMPI
+    set PATH
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows
 
