--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,18 +61,18 @@ steps:
   displayName: Use Python $(python.version) $(python.arch)
 
 # Install dependencies and PRISM
-- script: |
-    python -m pip install --upgrade pip setuptools wheel
-    pip install -r requirements_dev.txt
-  displayName: Install testing dependencies
+#- script: |
+#    python -m pip install --upgrade pip setuptools wheel
+#    pip install -r requirements_dev.txt
+#  displayName: Install testing dependencies
 
 # Test deployability
-- script: |
-    check-manifest
-    python setup.py sdist bdist_wheel
-    twine check dist/*
-    python -c "import prism; prism.get_info()"
-  displayName: Test deployability
+#- script: |
+#    check-manifest
+#    python setup.py sdist bdist_wheel
+#    twine check dist/*
+#    python -c "import prism; prism.get_info()"
+#  displayName: Test deployability
 
 # Test package in serial
 #- script: |
@@ -93,8 +93,9 @@ steps:
 # Windows
 - powershell: |
     iwr -outf ../MSIMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
-    ../MSIMpiSetup.exe -unattend -force
+    ../MSIMpiSetup.exe -unattend
     Get-ChildItem Env:
+    dir "C:\Program Files"
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows
 
