--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ steps:
 # Windows
 - powershell: |
     iwr -outf ../MSIMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
-    Start-Process ../MSIMpiSetup.exe -ArgumentList "-unattend -force" -Wait
+    Start-Process ../MSIMpiSetup.exe -ArgumentList "-unattend -force -verbose" -Wait
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows
 
