Update azure-pipelines.yml for Azure Pipelines [ci skip]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,6 +94,8 @@ steps:
 - powershell: |
     iwr -outf ../MSIMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
     Start-Process ../MSIMpiSetup.exe -ArgumentList "-unattend -force -verbose" -Wait
+    Get-ChildItem Env:
+    dir "C:\Program Files"
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows
 
