--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,10 +94,9 @@ steps:
 - powershell: |
     iwr -outf ..\MSIMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
     Start-Process ..\MSIMpiSetup.exe -ArgumentList "-unattend -force -verbose" -Wait
-    $Profile
-    Add-Content -Path $Profile.CurrentUserAllHosts -Value '$Env:MSMPI_BIN += "C:\Program Files\Microsoft MPI\Bin"'
-    Get-ChildItem Env:
-    dir "C:\Program Files"
+    $Env:MSMPI_BIN = "C:\Program Files\Microsoft MPI\Bin"
+    $Env:Path += "C:\Program Files\Microsoft MPI\Bin
+    refreshenv
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows
 
