Update azure-pipelines.yml for Azure Pipelines [ci skip]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,15 +79,17 @@ steps:
 #    coverage run --rcfile=setup.cfg -m pytest
 #  displayName: Test package in serial
 
-# Install MPI
+# Install MPI and mpi4py
 # Linux
 - bash: |
     sudo apt-get install -y -q openmpi-bin libopenmpi-dev
+    pip install --no-cache-dir mpi4py
   condition: eq(variables['Agent.OS'], 'Linux')
   displayName: Install MPI distribution on Linux
 # Mac OS-X
 - bash: |
     brew install openmpi
+    pip install --no-cache-dir mpi4py
   condition: eq(variables['Agent.OS'], 'Darwin')
   displayName: Install MPI distribution on Mac OS-X
 # Windows
@@ -96,6 +98,7 @@ steps:
     Start-Process ..\MSMpiSDK.msi -ArgumentList "/quiet /qn" -Wait
     iwr -outf ..\MSMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
     Start-Process ..\MSMpiSetup.exe -ArgumentList "-unattend -force -verbose" -Wait
+    pip install --no-cache-dir mpi4py
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows
 
@@ -104,12 +107,6 @@ steps:
     Get-ChildItem Env:Path
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Testing
-
-# Install mpi4py
-- script: |
-    pip install mpi4py --no-cache-dir
-    python -c "import mpi4py.MPI; mpi4py.MPI.get_vendor()"
-  displayName: Install mpi4py
 
 # Test package in MPI
 - script: |
