--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ steps:
 
 # Set PATH variables for Windows
 - powershell: |
-    [Environment]::SetEnvironmentVariable("TestVariable", "Test value.", "Process")
+    [Environment]::SetEnvironmentVariable("TestVariable", "Test value.", "User")
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Setting PATH on Windows
 
@@ -105,6 +105,7 @@ steps:
     iwr -outf ..\MSMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
     Start-Process ..\MSMpiSetup.exe -ArgumentList "-unattend -force -verbose" -Wait
     Get-ChildItem Env:
+    [Environment]::GetEnvironmentVariable("TestVariable","User")
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows
 
