--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,8 +100,8 @@ steps:
     Start-Process ..\MSMpiSDK.msi -ArgumentList "/quiet /qn" -Wait
     iwr -outf ..\MSMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
     Start-Process ..\MSMpiSetup.exe -ArgumentList "-unattend -force -verbose" -Wait
-    $env:MSMPI_BIN = "C:\Program Files\Microsoft MPI\Bin"
-    $env:Path += "C:\Program Files\Microsoft MPI\Bin;"
+    $Env:MSMPI_BIN = "C:\Program Files\Microsoft MPI\Bin"
+    $Env:Path += ";C:\Program Files\Microsoft MPI\Bin"
     pip install --no-cache-dir mpi4py
     mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
   condition: eq(variables['Agent.OS'], 'Windows_NT')
