--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,23 +61,23 @@ steps:
   displayName: Use Python $(python.version) $(python.arch)
 
 # Install dependencies and PRISM
-#- script: |
-#    python -m pip install --upgrade pip setuptools wheel
-#    pip install -r requirements_dev.txt
-#  displayName: Install testing dependencies
+- script: |
+    python -m pip install --upgrade pip setuptools wheel
+    pip install -r requirements_dev.txt
+  displayName: Install testing dependencies
 
 # Test deployability
-#- script: |
-#    check-manifest
-#    python setup.py sdist bdist_wheel
-#    twine check dist/*
-#    python -c "import prism; prism.get_info()"
-#  displayName: Test deployability
+- script: |
+    check-manifest
+    python setup.py sdist bdist_wheel
+    twine check dist/*
+    python -c "import prism; prism.get_info()"
+  displayName: Test deployability
 
 # Test package in serial
-#- script: |
-#    coverage run --rcfile=setup.cfg -m pytest
-#  displayName: Test package in serial
+- script: |
+    coverage run --rcfile=setup.cfg -m pytest
+  displayName: Test package in serial
 
 # Install MPI, mpi4py and run MPI tests
 # Linux
