--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,7 +103,7 @@ steps:
     $Env:MSMPI_BIN = "C:\Program Files\Microsoft MPI\Bin"
     $Env:Path += ";C:\Program Files\Microsoft MPI\Bin"
     pip install --no-cache-dir mpi4py
-    mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
+    cmd \c mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows and run in MPI
 
