--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -6,6 +6,14 @@
 variables:
   python.arch: 'x64'
 
+schedules:
+- cron: "0 0 * * 0"
+  displayName: Weekly Sunday build
+  branches:
+    include:
+    - master
+  always: true
+
 strategy:
   matrix:
     linux-python35:
