--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,16 @@ sudo: true
 matrix:
     include:
         - os: osx
-          language: generic
-          env: RUN_COVERAGE=0 PY=3
           python: 3
+          osx_image: xcode10.2
+          language: generic
+          env: PY=3
         - python: 3.5
-          env: RUN_COVERAGE=1
         - python: 3.5-dev
-          env: RUN_COVERAGE=0
         - python: 3.6
-          env: RUN_COVERAGE=0
         - python: 3.6-dev
-          env: RUN_COVERAGE=0
         - python: 3.7
-          env: RUN_COVERAGE=0
         - python: 3.7-dev
-          env: RUN_COVERAGE=0
 
 before_install:
     - |
@@ -28,43 +23,29 @@ before_install:
           sudo apt-get update -q
       else
           brew update
-          brew cask uninstall oclint
-          brew upgrade python
       fi
     - python$PY -m pip install --upgrade pip setuptools wheel
-    - python$PY -m pip install -r requirements_dev.txt
+    - pip$PY install -r requirements_dev.txt
 install:
     - check-manifest
     - python$PY setup.py sdist bdist_wheel
     - twine check dist/*
     - python$PY -c "import prism; prism.get_info()"
 script:
-    - |
-      if [[ "$RUN_COVERAGE" == "1" ]]; then
-          coverage run --rcfile=setup.cfg -m pytest
-      else
-          pytest
-      fi
+    - coverage run --rcfile=setup.cfg -m pytest
     - |
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
           sudo apt-get install -y -q openmpi-bin libopenmpi-dev
       else
           brew install openmpi
       fi
-    - python$PY -m pip --no-cache-dir install mpi4py
+    - pip$PY --no-cache-dir install mpi4py
     - |
-      if [[ "$RUN_COVERAGE" == "1" ]]; then
-          mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
-          coverage combine
-          coverage report -m
-      else
-          mpiexec -n 2 pytest
-      fi
+      mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
+      coverage combine
+      coverage report -m
 after_success:
-    - |
-      if [[ "$RUN_COVERAGE" == "1" ]]; then
-          codecov
-      fi
+    - codecov
 before_deploy:
     - rm -r dist
     - rm -r build
