--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,7 +5,7 @@ emcee>=2.2.1
 pytest>=3.8.0
 pytest-cov
 pytest-pep8
-pytest-qt
+pytest-qt>=2.0
 readme_renderer[md]
 setuptools>=38.6.0
 twine>=1.13.0
