[WIP #27] Adding more tests for the GUI (at 94% now).

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ universal = 0
 addopts = --mpl --pep8 -v
 testpaths = ./prism
 qt_api = pyqt5
+filterwarnings = ignore::prism._internal.RequestWarning
 
 [coverage:run]
 parallel = true
