More CI problem fixes.

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -100,7 +100,7 @@ steps:
     $Env:MSMPI_BIN = "C:\Program Files\Microsoft MPI\Bin"
     $Env:Path += ";C:\Program Files\Microsoft MPI\Bin"
     pip install --no-cache-dir mpi4py
-    mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
+    cmd /c "mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest 2>&1"
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows and run in MPI
 
