--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ matrix:
     include:
         - os: osx
           python: 3
-          osx_image: xcode10.2
           language: generic
           env: PY=3
         - python: 3.5
@@ -16,6 +15,7 @@ matrix:
         - python: 3.6-dev
         - python: 3.7
         - python: 3.7-dev
+        - python: 3.8-dev
 
 before_install:
     - |
