--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 os: linux
 dist: xenial
 sudo: true
+services:
+    - xvfb
 
 matrix:
     include:
@@ -15,7 +17,6 @@ matrix:
         - python: 3.6-dev
         - python: 3.7
         - python: 3.7-dev
-        - python: 3.8-dev
 
 before_install:
     - |
