--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
 os: linux
 dist: xenial
 sudo: true
-services:
-    - xvfb
 
 matrix:
     include:
@@ -22,6 +20,7 @@ before_install:
     - |
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
           sudo apt-get update -q
+          sudo apt-get install -y libdbus-1-3 libxkbcommon-x11-0
       else
           brew update
           brew cleanup
