--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -57,6 +57,12 @@ steps:
     addToPath: true
   displayName: Use Python $(python.version) $(python.arch)
 
+# Install missing libraries on Linux
+- bash: |
+    sudo apt-get install -y libdbus-1-3 libxkbcommon-x11-0 
+  condition: eq(variables['Agent.OS'], 'Linux')
+  displayName: Install missing libraries required for Qt on Linux
+
 # Install dependencies and PRISM
 - script: |
     python -m pip install --upgrade pip setuptools wheel
