--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -59,7 +59,7 @@ steps:
 
 # Install missing libraries on Linux
 - bash: |
-    sudo apt-get install -y libdbus-1-3 libxkbcommon-x11-0 
+    sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0 
   condition: eq(variables['Agent.OS'], 'Linux')
   displayName: Install missing libraries required for Qt on Linux
 
