--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
     - |
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
           sudo apt-get update -q
-          sudo apt-get install -y libdbus-1-3 libxkbcommon-x11-0
+          sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
       else
           brew update
           brew cleanup
