--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -87,7 +87,7 @@ steps:
 - bash: |
     sudo apt-get install -y -q openmpi-bin libopenmpi-dev
     pip install --no-cache-dir mpi4py
-    mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
+    mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest --no-xvfb
   condition: eq(variables['Agent.OS'], 'Linux')
   displayName: Install MPI distribution on Linux and run in MPI
 # Mac OS-X
