--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 universal = 0
 
 [tool:pytest]
-addopts = --mpl --pep8 -v
+addopts = --mpl --pep8 -v -p conftest
 testpaths = ./prism
 qt_api = pyqt5
 filterwarnings = ignore::prism._internal.RequestWarning
