[WIP #27] Added an error/warning message when a colormap like 'jet' is selected. Made some optimizations concerning testing the GUI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 universal = 0
 
 [tool:pytest]
-addopts = --mpl --pep8 -v -p conftest
+addopts = --mpl --pep8 -v
 testpaths = ./prism
 qt_api = pyqt5
 filterwarnings = ignore::prism._internal.RequestWarning
@@ -13,5 +13,7 @@ include = prism/*
 omit =
   prism/tests/*
   prism/*/tests/*
-  prism/__version__*
+  prism/__version__.py
+  prism/conftest.py
+  prism/*/conftest.py
 
