--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_install:
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
           sudo apt-get update -q
           sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
+          unset DISPLAY
+          export QT_QPA_PLATFORM=offscreen
       else
           brew update
           brew cleanup
