--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -5,6 +5,7 @@
 
 variables:
   python.arch: 'x64'
+  upload_coverage: false
 
 strategy:
   matrix:
@@ -17,9 +18,11 @@ strategy:
     linux-python37:
       imageName: 'ubuntu-16.04'
       python.version: '3.7'
+      upload_coverage: true
     mac-python37:
       imageName: 'macos-10.13'
       python.version: '3.7'
+      upload_coverage: true
     windows-x86-python35:
       imageName: 'windows-2019'
       python.version: '3.5'
@@ -32,18 +35,17 @@ strategy:
       imageName: 'windows-2019'
       python.version: '3.7'
       python.arch: 'x86'
+      upload_coverage: true
     windows-x64-python35:
       imageName: 'windows-2019'
       python.version: '3.5'
-      python.arch: 'x64'
     windows-x64-python36:
       imageName: 'windows-2019'
       python.version: '3.6'
-      python.arch: 'x64'
     windows-x64-python37:
       imageName: 'windows-2019'
       python.version: '3.7'
-      python.arch: 'x64'
+      upload_coverage: true
   maxParallel: 10
 
 pool:
@@ -59,7 +61,9 @@ steps:
 
 # Install missing libraries on Linux
 - bash: |
-    sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0 
+    sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
+    unset DISPLAY
+    export QT_QPA_PLATFORM=offscreen
   condition: eq(variables['Agent.OS'], 'Linux')
   displayName: Install missing libraries required for Qt on Linux
 
@@ -129,4 +133,5 @@ steps:
 # Upload covarage report to CodeCov
 - script: |
     codecov
-  displayName: Upload coverage report
+  condition: and(succeeded(), eq($(upload_coverage), true))
+  displayName: Upload coverage report if requested
