--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -62,6 +62,7 @@ steps:
 # Install missing libraries on Linux
 - bash: |
     sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
+    echo "##vso[task.setvariable variable=QT_QPA_PLATFORM]offscreen"
   condition: eq(variables['Agent.OS'], 'Linux')
   displayName: Install missing libraries required for Qt on Linux
 
@@ -80,25 +81,13 @@ steps:
   displayName: Test deployability
 
 # Test package in serial
-# Linux
-- bash: |
-    unset DISPLAY
-    export QT_QPA_PLATFORM=offscreen
-    coverage run --rcfile=setup.cfg -m pytest
-  condition: eq(variables['Agent.OS'], 'Linux')
-  displayName: Test package in serial on Linux
-
-# MacOS-X/Windows
 - script: |
     coverage run --rcfile=setup.cfg -m pytest
-  condition: ne(variables['Agent.OS'], 'Linux')
-  displayName: Test package in serial on MacOS-X/Windows
+  displayName: Test package in serial
 
 # Install MPI, mpi4py and run MPI tests
 # Linux
 - bash: |
-    unset DISPLAY
-    export QT_QPA_PLATFORM=offscreen
     sudo apt-get install -y -q openmpi-bin libopenmpi-dev
     pip install --no-cache-dir mpi4py
     mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
@@ -118,11 +107,17 @@ steps:
     iwr -outf ..\MSMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/MSMpiSetup.exe
     Start-Process ..\MSMpiSetup.exe -ArgumentList "-unattend -force -verbose" -Wait
     $Env:MSMPI_BIN = "C:\Program Files\Microsoft MPI\Bin"
+    echo "##vso[task.setvariable variable=1313E_TEST]$Env:MSMPI_BIN"
     $Env:Path += ";C:\Program Files\Microsoft MPI\Bin"
     pip install --no-cache-dir mpi4py
     cmd /c "mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest 2>&1"
   condition: eq(variables['Agent.OS'], 'Windows_NT')
   displayName: Install MPI distribution on Windows and run in MPI
+
+- powershell: |
+    Get-ChildItem env:
+  condition: eq(variables['Agent.OS'], 'Windows_NT')
+  displayName: Windows reusing variables testing
 
 # Install mpi4py
 #- script: |
@@ -141,7 +136,7 @@ steps:
   displayName: Coverage report
 
 # Upload covarage report to CodeCov
-- script: |
-    codecov
+- bash: |
+    curl -s https://codecov.io/bash | bash
   condition: and(succeeded(), eq(variables['upload_coverage'], true))
   displayName: Upload coverage report if requested
