--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ jobs:
     - python: 3.6-dev
     - python: 3.7
     - python: 3.7-dev
+    - python: 3.8-dev
   allow_failures:
     - python: 3.8-dev
 
@@ -23,7 +24,6 @@ before_install:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get update -q
       sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
-      unset DISPLAY
       export QT_QPA_PLATFORM=offscreen
     else
       brew update
