[WIP #27] Fixed a bug where the MPL backend was not always switched back properly after the GUI closed. Replaced certain instances of key sequences with pre-defined ones for more portability. Started on writing tests for the rare exception cases in the GUI.

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,6 +3,8 @@ check-manifest
 emcee>=2.2.1
 pytest>=3.8.0
 pytest-cov
+pytest-mpl>=0.10.0
+pytest-ordering
 pytest-pep8
 pytest-qt>=2.0
 readme_renderer[md]
