--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ matplotlib>=2.2.4
 mlxtend>=0.9.1
 mpi4pyd>=0.2.4
 numpy>=1.12.0
-pyqt5>=5.12
+pyqt5==5.12.*
 scikit-learn>=0.19.1
 scipy>=1.0.0
 sortedcontainers>=1.5.9
