[WIP #27] Added the final tests required for the GUI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ universal = 0
 addopts = --mpl --pep8 -v
 testpaths = ./prism
 qt_api = pyqt5
+qt_no_exception_capture = 1
 filterwarnings = ignore::prism._internal.RequestWarning
 
 [coverage:run]
