--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
       sudo apt-get update -q
       sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
       export QT_QPA_PLATFORM=offscreen
+      python$PY -c "import os; print(os.environ)"
     else
       brew update
       brew cleanup
