--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ jobs:
     - python: 3.7-dev
     - python: 3.8-dev
   allow_failures:
+    - os: osx
+      python: 3
+      language: generic
+      env: PY=3
     - python: 3.8-dev
 
 before_install:
