--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,17 @@ jobs:
     - python: 3.7-dev
     - python: 3.8-dev
   allow_failures:
-    - os: osx
-      python: 3
-      language: generic
-      env: PY=3
     - python: 3.8-dev
 
 before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      sudo apt-get update -q
       sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
       export QT_QPA_PLATFORM=offscreen
+    else
+      sudo brew update
+      sudo brew upgrade python
     fi
   - python$PY -m pip install --upgrade pip setuptools wheel
   - pip$PY install -r requirements_dev.txt
@@ -39,7 +39,7 @@ script:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get install -y -q openmpi-bin libopenmpi-dev
     else
-      brew install openmpi
+      sudo brew install openmpi
     fi
   - pip$PY --no-cache-dir install mpi4py
   - |
