--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ before_install:
       sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
       export QT_QPA_PLATFORM=offscreen
     else
-      sudo brew update
-      sudo brew upgrade python
+      brew update
+      brew upgrade python
     fi
   - python$PY -m pip install --upgrade pip setuptools wheel
   - pip$PY install -r requirements_dev.txt
@@ -39,7 +39,7 @@ script:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get install -y -q openmpi-bin libopenmpi-dev
     else
-      sudo brew install openmpi
+      brew install openmpi
     fi
   - pip$PY --no-cache-dir install mpi4py
   - |
