--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ dist: xenial
 
 jobs:
   include:
-    - os: osx
-      python: 3
+    - osx_image: xcode11.2
       language: generic
       env: PY=3
     - python: 3.5
@@ -19,12 +18,8 @@ jobs:
 before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get update -q
       sudo apt-get install -y xvfb libdbus-1-3 libxkbcommon-x11-0
       export QT_QPA_PLATFORM=offscreen
-    else
-      brew update
-      brew upgrade python
     fi
   - python$PY -m pip install --upgrade pip setuptools wheel
   - pip$PY install -r requirements_dev.txt
@@ -46,6 +41,9 @@ script:
     mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
     coverage combine
     coverage report -m
+after_success:
+  if: branch = tag AND os = linux
+  - echo "Hello"
 before_deploy:
   - rm -r dist
   - rm -r build
