--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ jobs:
       osx_image: xcode11.2
       language: generic
       env: PY=3
+      sudo: true
     - python: 3.5
     - python: 3.6
     - python: 3.7
